--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,16 +17,16 @@ pipeline {
     }
     stage('Start container') {
       steps {
-        bat 'docker compose up -d --no-color --wait'
+        bat 'docker compose up -d  --no-color --wait'
         bat 'docker compose ps'
       }
     }
   }
-  post {
-    always {
-      bat 'docker compose down --remove-orphans -v'
-      bat 'docker compose ps'
-    }
-  }
+  // post {
+  //   always {
+  //     bat 'docker compose down --remove-orphans -v'
+  //     bat 'docker compose ps'
+  //   }
+  // }
 
 }
